OP-213 add search field for opd records (#1663)
* Add new filters and improved layout (WIP)

* Externalize messages

* Improve layout

* Add USER column and made its filter available for SINGLEUSER=no

* Apply suggestions from code review

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Apply suggestions from reviews

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Apply suggestions from code review

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Apply suggestions from code review

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Apply suggestions from code review

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Fix Reset bundle and rollback latest suggested changes

* Fix indentation

* Apply review suggestions

---------

Co-authored-by: David B Malkovsky <david@malkovsky.org>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -340,6 +340,7 @@ angal.common.agefrom.label                                                      
 angal.common.ageto.label                                                                               = Age To:
 angal.common.all.btn                                                                                   = All
 angal.common.all.txt                                                                                   = All
+angal.common.alldiseasetypes.txt                                                                       = All Disease Types
 angal.common.alltypes.txt                                                                              = All Types
 angal.common.amount.txt                                                                                = Amount
 angal.common.arterialpressureabbr.txt                                                                  = AP
@@ -395,6 +396,7 @@ angal.common.new.btn                                                            
 angal.common.new.btn.key                                                                               = N
 angal.common.newpatient.btn                                                                            = New Patient
 angal.common.newpatient.btn.key                                                                        = N
+angal.common.nodatatoshow.msg                                                                          = No data to show.
 angal.common.notapplicable.txt                                                                         = N/A
 angal.common.notdefined.txt                                                                            = N/D
 angal.common.note.title                                                                                = Note
@@ -406,6 +408,7 @@ angal.common.patient.txt                                                        
 angal.common.patientID                                                                                 = Pat. ID
 angal.common.pleaseinsertacode.msg                                                                     = Please insert a code.
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
+angal.common.pleaseinsertavalidnumber.msg                                                              = Please insert a valid number.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
 angal.common.pleaseselectaward.msg                                                                     = Please select a ward.
@@ -459,6 +462,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                                            = %
 angal.common.update.btn                                                                                = Update
 angal.common.update.btn.key                                                                            = U
+angal.common.user.col                                                                                  = User
 angal.common.userid                                                                                    = User
 angal.common.userid.label                                                                              = User:
 angal.common.ward.txt                                                                                  = Ward
@@ -1190,6 +1194,7 @@ angal.opd.fullname.col                                                          
 angal.opd.insertavalidage.msg                                                                          = Insert a valid age.
 angal.opd.lastopdnote.txt                                                                              = Note
 angal.opd.lastopdvisitm.txt                                                                            = LAST OPD VISIT
+angal.opd.mypatient.btn                                                                                = My Patients
 angal.opd.new.btn                                                                                      = New
 angal.opd.newattendance.txt                                                                            = New Attendance
 angal.opd.newopdregistration.title                                                                     = New OPD Registration
@@ -1205,9 +1210,11 @@ angal.opd.opdnumberalreadyexist.msg                                             
 angal.opd.opdnumbermustbeanumber.msg                                                                   = OPD No. must be a number.
 angal.opd.opdoutpatientdepartment.title                                                                = OPD Out Patient Department
 angal.opd.operation                                                                                    = Operation
+angal.opd.otherfilters.border                                                                          = Other Filters
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
+angal.opd.patienttype.label                                                                            = Patient Type:
 angal.opd.pleasechooseavalidtimeforthenextvisit.msg                                                    = Please choose a valid time for the next visit.
 angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
 angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an attendance date.
@@ -1219,8 +1226,11 @@ angal.opd.reattendance.btn                                                      
 angal.opd.reattendance.txt                                                                             = Re-Attendance
 angal.opd.referral.txt                                                                                 = Referral
 angal.opd.referralto.txt                                                                               = Referred To
+angal.opd.reset.btn                                                                                    = Reset
+angal.opd.reset.btn.key                                                                                = R
+angal.opd.searchbycodespressenter.border                                                               = Search by Code (press ENTER)
+angal.opd.searchdisease.label                                                                          = Search Disease:
 angal.opd.secondname.txt                                                                               = Last Name
-angal.opd.selectadisease.txt                                                                           = Select a Disease
 angal.opd.selectapatient.txt                                                                           = Select a Patient
 angal.opd.selectaward.txt                                                                              = Select a Ward
 angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD service.
