OP-1026 add missing anamnesis related property strings

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -13,6 +13,7 @@ angal.admission.admissiontype.border                                            
 angal.admission.admissionwardcannotbeempty.msg                                                         = Admission ward cannot be empty.
 angal.admission.admitted.txt                                                                           = Admitted
 angal.admission.age.border                                                                             = Age
+angal.admission.anamnesis                                                                              = Anamnesis
 angal.admission.beddays.border                                                                         = Bed Days
 angal.admission.bill.btn                                                                               = Bill
 angal.admission.bill.btn.key                                                                           = B
@@ -209,6 +210,8 @@ angal.anamnesis.closed.pastproblems.border                                      
 angal.anamnesis.closed.remarks.border                                                                  = Remarks (Closed)
 angal.anamnesis.closed.resetpastproblems.tooltip                                                       = Reset Past Problems
 angal.anamnesis.closed.respiratory.txt                                                                 = Respiratory
+angal.anamnesis.closed.tooltip.excludenothingtodeclare.txt                                             = Exclude 'Nothing to declare'
+angal.anamnesis.closed.tooltip.resetpastproblems.txt                                                   = Reset Past Problems
 angal.anamnesis.diet.normal.txt                                                                        = Normal
 angal.anamnesis.diet.other.txt                                                                         = Other
 angal.anamnesis.diet.txt                                                                               = Diet
@@ -240,6 +243,8 @@ angal.anamnesis.family.other.txt                                                
 angal.anamnesis.family.remarks.border                                                                  = Remarks (Family)
 angal.anamnesis.family.resetfamilyhistory.tooltip                                                      = Reset Family History
 angal.anamnesis.family.respiratory.txt                                                                 = Respiratory
+angal.anamnesis.family.tooltip.excludenothingtodeclare.txt                                             = Exclude 'Nothing to declare'
+angal.anamnesis.family.tooltip.resetfamilyhistory.txt                                                  = Reset Family History
 angal.anamnesis.firstname.label                                                                        = First Name:
 angal.anamnesis.hrt.no.txt                                                                             = No
 angal.anamnesis.hrt.txt                                                                                = HRT
@@ -286,6 +291,7 @@ angal.anamnesis.smoke.txt                                                       
 angal.anamnesis.smoke.yes.txt                                                                          = Yes
 angal.anamnesis.taxcode.txt                                                                            = Tax Number ID:
 angal.anamnesis.title.txt                                                                              = Anamnesis
+angal.anamnesis.tooltip.savethepatienthistory.txt                                                      = Save the Patient History
 angal.billbrowser.balance.col                                                                          = Balance
 angal.billbrowser.bills.title                                                                          = Bills
 angal.billbrowser.closed.title                                                                         = Closed
@@ -1277,6 +1283,7 @@ angal.opetype.newoperationtype.title                                            
 angal.opetype.operationtypebrowser.title                                                               = Operation Type Browser
 angal.patient.agestar                                                                                  = Age *
 angal.patient.alive.btn                                                                                = Alive
+angal.patient.anamnesis                                                                                = Anamnesis
 angal.patient.birthdate                                                                                = Birth Date
 angal.patient.bloodtype                                                                                = Blood Type
 angal.patient.bloodtype.unknown                                                                        = Unknown
