--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -718,6 +718,9 @@ angal.labnew.title                                                              
 angal.labnew.tooltip.associateapatientwiththisexam                                                     = Associate a Patient with this exam
 angal.labnew.tooltip.changethepatientassociatedwiththisexams                                           = Change the Patient associated with this exam
 angal.labnew.tooltip.removepatientassociationwiththisexam                                              = Remove Patient association with this exam
+angal.login.accountisnowlockedforminutes.fmt.msg                                                       = The account is now locked for {0} minutes.
+angal.login.accountisstilllockedformoreminutes.fmt.msg                                                 = The account is still locked for {0} more minutes.
+angal.login.accountislocked.msg                                                                        = The account is locked.
 angal.login.password.label                                                                             = Password:
 angal.login.passwordisincorrectpleaseretry.msg                                                         = The password is incorrect; please retry.
 angal.login.title                                                                                      = Login
