--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -161,7 +161,6 @@ angal.admission.therapy.btn                                                     
 angal.admission.therapy.btn.key                                                                        = H
 angal.admission.thereismorethanonependingbillforthispatientcontinue.msg                                = There is more than one pending bill for this patient, continue?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition.msg                                   = The selected admission has no concern with malnutrition.
-angal.admission.thispatienthasapendingbill.msg                                                         = This Patient has a pending bill.
 angal.admission.treatmenttype.border                                                                   = Treatment Type
 angal.admission.unknown                                                                                = unknown
 angal.admission.visitdate.border                                                                       = Visit Date
@@ -1130,6 +1129,7 @@ angal.newbill.item.title                                                        
 angal.newbill.list.txt                                                                                 = List
 angal.newbill.medical.btn                                                                              = Medical
 angal.newbill.medical.title                                                                            = Medical
+angal.newbill.multipleopenedbillsnotallowedpleasesolve.msg                                             = Multiple opened bills not allowed, please solve.
 angal.newbill.newdescription.txt                                                                       = new description
 angal.newbill.nopricelistselectedwillbeused.fmt.msg                                                    = No pricelist selected. {0} will be used.
 angal.newbill.operation.btn                                                                            = Operation
