Apply suggestions from code review
Co-authored-by: David B Malkovsky <david@malkovsky.org>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1159,9 +1159,9 @@ angal.newbill.selectamedical.txt                                                
 angal.newbill.selectanexam.txt                                                                         = Select an exam:
 angal.newbill.selectanoperation.txt                                                                    = Select an operation:
 angal.newbill.selectapricelist.title                                                                   = Select a PriceList
-angal.newbill.somepriceshavebeenchangeddoyouwanttoupdatetheitemsprices.fmg.msg                         = Some prices have been changed : {0}\n\nDo you want to update the items prices?
+angal.newbill.somepriceshavebeenchangeddoyouwanttoupdatetheitemsprices.fmg.msg                         = Some prices have been changed : {0}\n\nDo you want to update the items' prices?
 angal.newbill.somepricesnotfound.fmt.msg                                                               = Some prices not found : {0}
-angal.newbill.somepricesnotfoundandsomeotherchangeddoyouwanttoupdatetheitemsprices.fmt.msg             = Some prices not found and some other changed:\nNot found : {0}\nChanged : {1}\n\nDo you want to update the existing items prices?
+angal.newbill.somepricesnotfoundandsomeotherchangeddoyouwanttoupdatetheitemsprices.fmt.msg             = Some prices not found and some other changed:\nNot found : {0}\nChanged : {1}\n\nDo you want to update the existing items' prices?
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
 angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
@@ -1754,4 +1754,4 @@ angal.xmpp.userinfo.fmt.txt                                                     
 angal.xmpp.usersinfo.border                                                                            = User's Info
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                                       = \n*** {0} wants to share with you this report: {1}\n
 angal.xmpp.wouldliketosend.fmt.msg                                                                     = {0} would like to send: \n{1}
-angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = you have rejected the file transfer
+angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = You have rejected the file transfer.
