OP-1048 Fix OH009 and OH010 layouts

--- a/rpt_stat/OH009_InPatientReport_en.properties
+++ b/rpt_stat/OH009_InPatientReport_en.properties
@@ -8,9 +8,9 @@ City = CITY
 
 Code = CODE
 
-DATE_ADM = DATE_ADM
+DATE_ADM = ADM. DATE
 
-DATE_DIS = DATE_DIS
+DATE_DIS = DIS. DATE
 
 Days = DAYS
 
@@ -18,16 +18,18 @@ Disease = DISEASE
 
 From = From
 
-InPatient = InPatient
-
 Los = LOS
 
 Outcome = OUTCOME
 
-Pat = PAT
+PatID = PAT ID
 
 Sex = SEX
 
 To = To
 
 Ward = WARD
+
+AvgLOS = Average LOS
+
+jTitle = OH009 - InPatient Report
