OP-1025 separate business logic from gui in patient bill edit (#1698)
* Centralize pending bills check and optimize GUI updates

* Remove temporary code

* Remove commented code

* Change new lines formatting

* Improved comments

* Factorize shared dimensions

* Apply suggestions from code review

* Remove useless constructors

Co-authored-by: David B Malkovsky <david@malkovsky.org>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -161,7 +161,6 @@ angal.admission.therapy.btn                                                     
 angal.admission.therapy.btn.key                                                                        = H
 angal.admission.thereismorethanonependingbillforthispatientcontinue.msg                                = There is more than one pending bill for this patient, continue?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition.msg                                   = The selected admission has no concern with malnutrition.
-angal.admission.thispatienthasapendingbill.msg                                                         = This Patient has a pending bill.
 angal.admission.treatmenttype.border                                                                   = Treatment Type
 angal.admission.unknown                                                                                = unknown
 angal.admission.visitdate.border                                                                       = Visit Date
@@ -1130,6 +1129,7 @@ angal.newbill.item.title                                                        
 angal.newbill.list.txt                                                                                 = List
 angal.newbill.medical.btn                                                                              = Medical
 angal.newbill.medical.title                                                                            = Medical
+angal.newbill.multipleopenedbillsnotallowedpleasesolve.msg                                             = Multiple opened bills not allowed, please solve.
 angal.newbill.newdescription.txt                                                                       = new description
 angal.newbill.nopricelistselectedwillbeused.fmt.msg                                                    = No pricelist selected. {0} will be used.
 angal.newbill.operation.btn                                                                            = Operation
@@ -1159,6 +1159,9 @@ angal.newbill.selectamedical.txt                                                
 angal.newbill.selectanexam.txt                                                                         = Select an exam:
 angal.newbill.selectanoperation.txt                                                                    = Select an operation:
 angal.newbill.selectapricelist.title                                                                   = Select a PriceList
+angal.newbill.somepriceshavebeenchangeddoyouwanttoupdatetheitemsprices.fmg.msg                         = Some prices have been changed : {0}\n\nDo you want to update the items' prices?
+angal.newbill.somepricesnotfound.fmt.msg                                                               = Some prices not found: {0}
+angal.newbill.somepricesnotfoundandsomeotherchangeddoyouwanttoupdatetheitemsprices.fmt.msg             = Some prices not found and some other changed:\nNot found: {0}\nChanged: {1}\n\nDo you want to update the existing items' prices?
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
 angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
@@ -1751,4 +1754,4 @@ angal.xmpp.userinfo.fmt.txt                                                     
 angal.xmpp.usersinfo.border                                                                            = User's Info
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                                       = \n*** {0} wants to share with you this report: {1}\n
 angal.xmpp.wouldliketosend.fmt.msg                                                                     = {0} would like to send: \n{1}
-angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = you have rejected the file transfer
+angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = You have rejected the file transfer.
