--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -113,7 +113,7 @@ angal.admission.patientfolder.dischart.btn                                      
 angal.admission.patientfolder.dischart.btn.key                                                         = S
 angal.admission.patientfolder.drugs.title                                                              = Drugs
 angal.admission.patientfolder.drugs.txt                                                                = Drugs
-angal.admission.patientfolder.examination.txt                                                          = EMAMINATION
+angal.admission.patientfolder.examination.txt                                                          = EXAMINATION
 angal.admission.patientfolder.exams.title                                                              = Exams
 angal.admission.patientfolder.laboratory.txt                                                           = Laboratory
 angal.admission.patientfolder.nodatatoshow.msg                                                         = No data to show.
