--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1324,10 +1324,10 @@ angal.patient.newpatient.title                                                  
 angal.patient.nextkin                                                                                  = Next of Kin
 angal.patient.no.btn                                                                                   = No
 angal.patient.note                                                                                     = Note
-angal.patient.consensus.consensus.txt                                                                  = Consensus
-angal.patient.consensus.administrative.txt                                                             = Administrative
-angal.patient.consensus.service.txt                                                                    = Service
-angal.patient.consensus.border                                                                         = Consensus
+angal.patient.consensus.consensus.txt                                                                  = Consent to treatment
+angal.patient.consensus.administrative.txt                                                             = Administrative consent
+angal.patient.consensus.service.txt                                                                    = Consent for additional services
+angal.patient.consensus.border                                                                         = Informed consent
 angal.patient.parenttogether                                                                           = Parents are together
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
