--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1325,6 +1325,7 @@ angal.patient.nextkin                                                           
 angal.patient.no.btn                                                                                   = No
 angal.patient.note                                                                                     = Note
 angal.patient.consensus.consensus.txt                                                                  = Consent to treatment
+angal.patient.consensus.consensus.mandatory.txt                                                        = "Consent to treatment" is mandatory
 angal.patient.consensus.administrative.txt                                                             = Administrative consent
 angal.patient.consensus.service.txt                                                                    = Consent for additional services
 angal.patient.consensus.border                                                                         = Informed consent
