OH-722 Add error messages related to visit validations done in OH-722 code

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1682,8 +1682,13 @@ angal.visit.findpatient.btn                                                     
 angal.visit.findpatient.btn.key                                                                        = P
 angal.visit.gotodate.btn                                                                               = Go to date:
 angal.visit.gotodate.btn.key                                                                           = G
+angal.visit.invalidvisitduration.msg                                                                   = The visit duration must be positive
+angal.visit.manyoverlappingpatientvisitsindifferentwards.msg                                           = The visit overlaps these existing patient visits: {0}
 angal.visit.nextarrow.btn                                                                              = Next->
 angal.visit.nextarrow.btn.key                                                                          = N
+angal.visit.overlappingpatientvisitsindifferentwards.msg                                               = The visit overlaps this existing patient visit in a different ward: {0}
+angal.visit.overlappingvisitinward.msg                                                                 = The visit overlaps this existing visit in the same ward: {0}
+angal.visit.overlappingmanyvisitsinward.msg                                                            = The visit overlaps these existing visits in the same ward: {0}
 angal.visit.pleasechooseadate.msg                                                                      = Please choose a date.
 angal.visit.pleasechooseapatient.msg                                                                   = Please choose a patient.
 angal.visit.pleasechooseaward.msg                                                                      = Please choose a ward.
