Apply suggestions from code review
Co-authored-by: David B Malkovsky <david@malkovsky.org>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1166,7 +1166,7 @@ angal.newbill.somepriceshavebeenchangeddoyouwanttoupdatetheitemsprices.fmg.msg  
 angal.newbill.somepricesnotfound.fmt.msg                                                               = Some prices not found: {0}
 angal.newbill.somepricesnotfoundandsomeotherchangeddoyouwanttoupdatetheitemsprices.fmt.msg             = Some prices not found and some other changed:\nNot found: {0}\nChanged: {1}\n\nDo you want to update the existing items' prices?
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
-angal.newbill.thepatienthasbeentransferredmeanwhilearrow.fmt.msg                                       = The patient has been transferred meanwhile: {0} -> {1}
+angal.newbill.thepatienthaschangedwardsarrow.fmt.msg                                                                  = The patient has changed wards: {0} -> {1}
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
 angal.newbill.thepricelistcurrencycodehaschangedarrow.fmt.msg                                          = The pricelist currency has changed: {0} -> {1}
 angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
