OP-990 Add further check for underlying data changes in billing (#1733)
* Check for underlying data changes upon saving

* Add latest checks

* Apply suggestions from code review

Co-authored-by: David B Malkovsky <david@malkovsky.org>

* Fix formatting

---------

Co-authored-by: David B Malkovsky <david@malkovsky.org>

Conflicts:
	bundle/language_en.properties

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -717,6 +717,9 @@ angal.labnew.title                                                              
 angal.labnew.tooltip.associateapatientwiththisexam                                                     = Associate a Patient with this exam
 angal.labnew.tooltip.changethepatientassociatedwiththisexams                                           = Change the Patient associated with this exam
 angal.labnew.tooltip.removepatientassociationwiththisexam                                              = Remove Patient association with this exam
+angal.login.accountislocked.msg                                                                        = The account is locked.
+angal.login.accountisnowlockedforminutes.fmt.msg                                                       = The account is now locked for {0} minutes.
+angal.login.accountisstilllockedformoreminutes.fmt.msg                                                 = The account is still locked for {0} more minutes.
 angal.login.password.label                                                                             = Password:
 angal.login.passwordisincorrectpleaseretry.msg                                                         = The password is incorrect; please retry.
 angal.login.title                                                                                      = Login
@@ -1163,7 +1166,9 @@ angal.newbill.somepriceshavebeenchangeddoyouwanttoupdatetheitemsprices.fmg.msg  
 angal.newbill.somepricesnotfound.fmt.msg                                                               = Some prices not found: {0}
 angal.newbill.somepricesnotfoundandsomeotherchangeddoyouwanttoupdatetheitemsprices.fmt.msg             = Some prices not found and some other changed:\nNot found: {0}\nChanged: {1}\n\nDo you want to update the existing items' prices?
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
+angal.newbill.thepatienthaschangedwardsarrow.fmt.msg                                                   = The patient has changed wards: {0} -> {1}
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
+angal.newbill.thepricelistcurrencycodehaschangedarrow.fmt.msg                                          = The pricelist currency has changed: {0} -> {1}
 angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
 angal.newbill.thispatienthasapendingbill.msg                                                           = This patient has a pending bill.
 angal.newbill.thispatienthasapendingbilldoyouwanttocreateanother.msg                                   = This patient has a pending bill. Do you want to create another?
