Fix check and add bundle for manager

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -40,6 +40,7 @@ angal.admission.deliverydate.border                                             
 angal.admission.deliveryresultype.border                                                               = Delivery Result Type
 angal.admission.deliverytype.border                                                                    = Delivery Type
 angal.admission.diagnosisin.col                                                                        = Diagnosis In
+angal.admission.diagnosisincannotbeempty.msg                                                           = Diagnosis -IN- cannot be empty.
 angal.admission.diagnosisinstar.border                                                                 = Diagnosis -IN- *
 angal.admission.diagnosisout.border                                                                    = Diagnosis -OUT-
 angal.admission.diagnosisout.col                                                                       = Diagnosis Out
@@ -1688,9 +1689,9 @@ angal.visit.invalidvisitduration.msg                                            
 angal.visit.manyoverlappingpatientvisitsindifferentwards.msg                                           = The visit overlaps these existing patient visits: {0}
 angal.visit.nextarrow.btn                                                                              = Next->
 angal.visit.nextarrow.btn.key                                                                          = N
+angal.visit.overlappingmanyvisitsinward.msg                                                            = The visit overlaps these existing visits in the same ward: {0}
 angal.visit.overlappingpatientvisitsindifferentwards.msg                                               = The visit overlaps this existing patient visit in a different ward: {0}
 angal.visit.overlappingvisitinward.msg                                                                 = The visit overlaps this existing visit in the same ward: {0}
-angal.visit.overlappingmanyvisitsinward.msg                                                            = The visit overlaps these existing visits in the same ward: {0}
 angal.visit.pleasechooseadate.msg                                                                      = Please choose a date.
 angal.visit.pleasechooseapatient.msg                                                                   = Please choose a patient.
 angal.visit.pleasechooseaward.msg                                                                      = Please choose a ward.
